[package]
name = "quantix"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quantix"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.24.0"
futures-intrusive = "0.5"
pollster = "0.4.0"
pyo3 = "0.27.2"
wgpu = "28.0.0"
tokio = { version="1.49.0", features = ["full"] }
env_logger = "0.11.8"

